--- a/src/main/resources/templates/secondPage.html
+++ b/src/main/resources/templates/secondPage.html
@@ -5,8 +5,8 @@
     <title>Second page</title>
 </head>
 <body>
-Hello! It is online-calculator.
 
+<p th:text="#{endPoint}"></p>
 
 </body>
 </html>
