--- a/src/main/resources/templates/trips.html
+++ b/src/main/resources/templates/trips.html
@@ -2,24 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Автомобили</title>
-
+    <title th:utext="#{trips}">Trips</title>
 </head>
 <body>
 <table>
     <td width="15" align="center"><b>Id</b></td>
-    <td width="75" align="center"><b>Откуда</b></td>
-    <td width="150" align="center"><b>Куда</b></td>
-    <td width="80" align="center"><b>Расстояние</b></td>
-    <td width="110" align="center"><b>Дата старта</b></td>
-    <td width="65" align="center"><b>Время старта</b></td>
-    <td width="60" align="center"><b>Расход топлива</b></td>
-    <td width="100" align="center"><b>Диспетчер</b></td>
-    <td width="150" align="center"><b>Водитель</b></td>
-    <td width="140" align="center"><b>Автомобиль</b></td>
-    <td width="150" align="center"><b>Груз</b></td>
-    <td width="110" align="center"><b>Дата окончания</b></td>
-    <td width="70" align="center"><b>Время окончания</b></td>
+    <td width="75" align="center" th:utext="#{startPoint}"><b>From</b></td>
+    <td width="150" align="center" th:utext="#{endPoint}"><b>Where</b></td>
+    <td width="80" align="center" th:utext="#{distance}"><b>Distance</b></td>
+    <td width="110" align="center" th:utext="#{startDate}"><b>Start date</b></td>
+    <td width="65" align="center" th:utext="#{startTime}"><b>Start time</b></td>
+    <td width="60" align="center" th:utext="#{fuelUsed}"><b>Fuel used</b></td>
+    <td width="100" align="center" th:utext="#{idDispatcher}"><b>Dispatcher</b></td>
+    <td width="150" align="center" th:utext="#{idDriver}"><b>Driver</b></td>
+    <td width="140" align="center" th:utext="#{idCar}"><b>Car</b></td>
+    <td width="150" align="center" th:utext="#{idCargo}"><b>Cargo</b></td>
+    <td width="110" align="center" th:utext="#{endDate}"><b>End date</b></td>
+    <td width="70" align="center" th:utext="#{endTime}"><b>End time</b></td>
 </table>
 <table th:unless="${trips == null}"  th:each="trip : ${trips}">
     <td width="15" align="center" th:text="${trip.id}"></td>
@@ -32,10 +31,9 @@
     <td width="100" align="center" th:text="${trip.idDispatcher}"></td>
     <td width="150" align="center" th:text="${trip.idDriver}"></td>
     <td width="140" align="center" th:text="${trip.idCar}"></td>
-    <td width="150" align="center" th:text="${trip.idCargo}"></td>
+    <td width="150" align="center"> <a th:href="@{/cargo(id=${trip.IdCargo.getId})}" th:text="${trip.idCargo}"> </a></td>
     <td width="110" align="center" th:text="${trip.endDate}"></td>
     <td width="70" align="center" th:text="${trip.endTime}"></td>
-
 </table>
 <!--<div th:unless="${carWithStatus == null}" >
 <table th:each="car1: ${carWithStatus.cars}">
