--- a/src/main/resources/templates/cargos.html
+++ b/src/main/resources/templates/cargos.html
@@ -5,6 +5,22 @@
     <title th:utext="#{cargos}">Cargos</title>
 </head>
 <body>
+<style>
+    .even{background-color: #FFFACD}
+    .odd{background-color: #7FFFD4}
+</style>
+
+<div >
+    <form align="center" th:action="@{/cargos/all}">
+        <input type="radio" name="lang" id="english" value="en_En">
+        <label for="english">English</label>
+        <input type="radio" name="lang" id="russian" value="ru_Ru">
+        <label for="russian">Русский</label>
+        <button th:utext="#{selectLanguage}">Language</button>
+    </form>
+    <hr></hr>
+</div>
+
 <table>
     <td width="15" align="center"><b>Id</b></td>
     <td width="95" align="center" th:utext="#{invoiceNumber}"><b>Invoice number</b></td>
@@ -13,14 +29,14 @@
     <td width="80" align="center" th:utext="#{insuranceNumber}"><b>Insurance number</b></td>
 
 </table>
-<table th:unless="${cargos == null}"  th:each="cargo : ${cargos}">
+<table th:unless="${cargos == null}"  th:each="cargo : ${cargos}" th:class="${cargoStat.even}? 'even' : 'odd'">
     <td width="15" align="center" th:text="${cargo.id}"></td>
     <td width="95" align="center" th:text="${cargo.invoiceNumber}"></td>
     <td width="140" align="center" th:text="${cargo.name}"></td>
     <td width="60" align="center" th:text="${cargo.price}"></td>
     <td width="80" align="center" th:text="${cargo.insuranceNumber}"></td>
 </table>
-<div th:unless="${cargo == null}" >
+<div th:unless="${cargo == null}" class="even">
     <table>
         <td width="15" align="center" th:text="${cargo.id}"></td>
         <td width="95" align="center" th:text="${cargo.invoiceNumber}"></td>
@@ -29,5 +45,16 @@
         <td width="80" align="center" th:text="${cargo.insuranceNumber}"></td>
     </table>
 </div>
+
+<table align="center" cellspacing="20">
+    <tr >
+        <td ><a href="/trips/all" th:utext="#{trips}">Trips</a></td>
+        <td ><a href="/drivers/all" th:utext="#{drivers}">Drivers</a></td>
+        <td ><a href="/dispatchers/all" th:utext="#{dispatchers}">Dispatchers</a></td>
+        <td ><a href="/cars/all" th:utext="#{cars}">Cars</a></td>
+        <td ><a href="/cargos/all" th:utext="#{cargos}">Cargos</a></td>
+        <td ><a href="/statusCar/all" th:utext="#{carStatuses}">Car statuses</a></td>
+    </tr>
+</table>
 </body>
 </html>
