--- a/src/main/resources/templates/dispatchers.html
+++ b/src/main/resources/templates/dispatchers.html
@@ -5,11 +5,46 @@
     <title>Все диспетчеры</title>
 </head>
 <body>
-<table th:each="dispatcher : ${dispatchers}">
-<td th:text="${dispatcher.id}"></td>
-<td th:text="${dispatcher.first_name}"></td>
-<td th:text="${dispatcher.second_name}"></td>
-<td th:text="${dispatcher.last_name}"></td>
+<style>
+    .even{background-color: #FFFACD}
+    .odd{background-color: #7FFFD4}
+</style>
+
+<div >
+    <form align="center" th:action="@{/dispatchers/all}">
+        <input type="radio" name="lang" id="english" value="en_En">
+        <label for="english">English</label>
+        <input type="radio" name="lang" id="russian" value="ru_Ru">
+        <label for="russian">Русский</label>
+        <button th:utext="#{selectLanguage}">Language</button>
+    </form>
+    <hr></hr>
+</div>
+
+<table>
+    <td width="15" align="center"><b>Id</b></td>
+    <td width="100" align="center" th:utext="#{first_name}"><b>First name</b></td>
+    <td width="100" align="center" th:utext="#{second_name}"><b>Second name</b></td>
+    <td width="100" align="center" th:utext="#{last_name}"><b>Last name</b></td>
+
+</table>
+
+<table th:each="dispatcher : ${dispatchers}" th:class="${dispatcherStat.even}? 'even' : 'odd'">
+<td width="15" align="center" th:text="${dispatcher.id}"></td>
+<td width="100" align="center" th:text="${dispatcher.first_name}"></td>
+<td width="100" align="center" th:text="${dispatcher.second_name}"></td>
+<td width="100" align="center" th:text="${dispatcher.last_name}"></td>
+</table>
+
+<table align="center" cellspacing="20">
+    <tr >
+        <td ><a href="/trips/all" th:utext="#{trips}">Trips</a></td>
+        <td ><a href="/drivers/all" th:utext="#{drivers}">Drivers</a></td>
+        <td ><a href="/dispatchers/all" th:utext="#{dispatchers}">Dispatchers</a></td>
+        <td ><a href="/cars/all" th:utext="#{cars}">Cars</a></td>
+        <td ><a href="/cargos/all" th:utext="#{cargos}">Cargos</a></td>
+        <td ><a href="/statusCar/all" th:utext="#{carStatuses}">Car statuses</a></td>
+    </tr>
 </table>
 </body>
 </html>
