--- a/src/main/resources/templates/drivers.html
+++ b/src/main/resources/templates/drivers.html
@@ -5,13 +5,40 @@
     <title>Все водители</title>
 </head>
 <body>
-<table th:each="driver : ${drivers}">
+<style>
+    .even{background-color: #FFFACD}
+    .odd{background-color: #7FFFD4}
+</style>
+
+<div >
+    <form align="center" th:action="@{/drivers/all}">
+        <input type="radio" name="lang" id="english" value="en_En">
+        <label for="english">English</label>
+        <input type="radio" name="lang" id="russian" value="ru_Ru">
+        <label for="russian">Русский</label>
+        <button th:utext="#{selectLanguage}">Language</button>
+    </form>
+    <hr></hr>
+</div>
+
+<table th:each="driver : ${drivers}" th:class="${driverStat.even}? 'even' : 'odd'">
     <td th:text="${driver.id}"></td>
     <td th:text="${driver.first_name}"></td>
     <td th:text="${driver.second_name}"></td>
     <td th:text="${driver.last_name}"></td>
     <td th:text="${driver.isInTrip}"></td>
     <td th:text="${driver.isActive}"></td>
-   </table>
+</table>
+
+<table align="center" cellspacing="20">
+    <tr >
+        <td ><a href="/trips/all" th:utext="#{trips}">Trips</a></td>
+        <td ><a href="/drivers/all" th:utext="#{drivers}">Drivers</a></td>
+        <td ><a href="/dispatchers/all" th:utext="#{dispatchers}">Dispatchers</a></td>
+        <td ><a href="/cars/all" th:utext="#{cars}">Cars</a></td>
+        <td ><a href="/cargos/all" th:utext="#{cargos}">Cargos</a></td>
+        <td ><a href="/statusCar/all" th:utext="#{carStatuses}">Car statuses</a></td>
+    </tr>
+</table>
 </body>
 </html>
