--- a/src/main/resources/templates/trips.html
+++ b/src/main/resources/templates/trips.html
@@ -5,6 +5,20 @@
     <title th:utext="#{trips}">Trips</title>
 </head>
 <body>
+<style>
+    .even{background-color: #FFFACD}
+    .odd{background-color: #7FFFD4}
+</style>
+<div >
+<form align="center" th:action="@{/trips/all}">
+    <input type="radio" name="lang" id="english" value="en_En">
+    <label for="english">English</label>
+    <input type="radio" name="lang" id="russian" value="ru_Ru">
+    <label for="russian">Русский</label>
+    <button th:utext="#{selectLanguage}">Language</button>
+</form>
+<hr></hr>
+</div>
 <table>
     <td width="15" align="center"><b>Id</b></td>
     <td width="75" align="center" th:utext="#{startPoint}"><b>From</b></td>
@@ -20,7 +34,8 @@
     <td width="110" align="center" th:utext="#{endDate}"><b>End date</b></td>
     <td width="70" align="center" th:utext="#{endTime}"><b>End time</b></td>
 </table>
-<table th:unless="${trips == null}"  th:each="trip : ${trips}">
+<table>
+    <tr th:unless="${trips == null}"  th:each="trip : ${trips}" th:class="${tripStat.even}?'even':'odd'">
     <td width="15" align="center" th:text="${trip.id}"></td>
     <td width="75" align="center" th:text="${trip.startPoint}"></td>
     <td width="150" align="center" th:text="${trip.endPoint}"></td>
@@ -34,15 +49,18 @@
     <td width="150" align="center"> <a th:href="@{/cargo(id=${trip.IdCargo.getId})}" th:text="${trip.idCargo}"> </a></td>
     <td width="110" align="center" th:text="${trip.endDate}"></td>
     <td width="70" align="center" th:text="${trip.endTime}"></td>
+    </tr>
 </table>
-<!--<div th:unless="${carWithStatus == null}" >
-<table th:each="car1: ${carWithStatus.cars}">
-   <td width="15" align="center" th:text="${car1.id}"></td>
-   <td width="60" align="center" th:text="${car1.brand}"></td>
-   <td width="75" align="center" th:text="${car1.number}"></td>
-   <td width="45" align="center" th:text="${car1.mileage}"></td>
-   <td width="280" th:text="${car1.idStatus}"></td>
+<table align="center" cellspacing="20">
+    <tr >
+        <td ><a href="/trips/all" th:utext="#{trips}">Trips</a></td>
+        <td ><a href="/drivers/all" th:utext="#{drivers}">Drivers</a></td>
+        <td ><a href="/dispatchers/all" th:utext="#{dispatchers}">Dispatchers</a></td>
+        <td ><a href="/cars/all" th:utext="#{cars}">Cars</a></td>
+        <td ><a href="/cargos/all" th:utext="#{cargos}">Cargos</a></td>
+        <td ><a href="/statusCar/all" th:utext="#{carStatuses}">Car statuses</a></td>
+    </tr>
 </table>
-</div>-->
+
 </body>
 </html>
