--- a/src/main/resources/templates/trips.html
+++ b/src/main/resources/templates/trips.html
@@ -2,6 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title th:utext="#{trips}">Trips</title>
 </head>
 <body>
@@ -17,40 +22,54 @@
     <label for="russian">Русский</label>
     <button th:utext="#{selectLanguage}">Language</button>
 </form>
-<hr></hr>
 </div>
-<table>
-    <td width="15" align="center"><b>Id</b></td>
-    <td width="75" align="center" th:utext="#{startPoint}"><b>From</b></td>
-    <td width="150" align="center" th:utext="#{endPoint}"><b>Where</b></td>
-    <td width="80" align="center" th:utext="#{distance}"><b>Distance</b></td>
-    <td width="110" align="center" th:utext="#{startDate}"><b>Start date</b></td>
-    <td width="65" align="center" th:utext="#{startTime}"><b>Start time</b></td>
-    <td width="60" align="center" th:utext="#{fuelUsed}"><b>Fuel used</b></td>
-    <td width="100" align="center" th:utext="#{idDispatcher}"><b>Dispatcher</b></td>
-    <td width="150" align="center" th:utext="#{idDriver}"><b>Driver</b></td>
-    <td width="140" align="center" th:utext="#{idCar}"><b>Car</b></td>
-    <td width="150" align="center" th:utext="#{idCargo}"><b>Cargo</b></td>
-    <td width="110" align="center" th:utext="#{endDate}"><b>End date</b></td>
-    <td width="70" align="center" th:utext="#{endTime}"><b>End time</b></td>
-</table>
-<table>
-    <tr th:unless="${trips == null}"  th:each="trip : ${trips}" th:class="${tripStat.even}?'even':'odd'">
-    <td width="15" align="center" th:text="${trip.id}"></td>
-    <td width="75" align="center" th:text="${trip.startPoint}"></td>
-    <td width="150" align="center" th:text="${trip.endPoint}"></td>
-    <td width="80" align="center" th:text="${trip.distance}"></td>
-    <td width="110" align="center" th:text="${trip.startDate}"></td>
-    <td width="65" align="center" th:text="${trip.startTime}"></td>
-    <td width="60" align="center" th:text="${trip.fuelUsed}"></td>
-    <td width="100" align="center" th:text="${trip.idDispatcher}"></td>
-    <td width="150" align="center" th:text="${trip.idDriver}"></td>
-    <td width="140" align="center" th:text="${trip.idCar}"></td>
-    <td width="150" align="center"> <a th:href="@{/cargo(id=${trip.IdCargo.getId})}" th:text="${trip.idCargo}"> </a></td>
-    <td width="110" align="center" th:text="${trip.endDate}"></td>
-    <td width="70" align="center" th:text="${trip.endTime}"></td>
-    </tr>
-</table>
+
+<div class="container-xxl p-3 bg-primary text-white text-center">
+    <h1>Jarex Company (or another name)</h1>
+    <p th:utext="#{programname}">Program for cargo transportation management</p>
+</div>
+
+<div class="container-fluid p-2 text-center">
+    <div class="row row-cols-auto justify-content-md-center">
+        <table>
+            <tr>
+                <th width="15" align="center"><b>Id</b></th>
+                <th width="75" align="center" th:utext="#{startPoint}"><b>From</b></th>
+                <th width="150" align="center" th:utext="#{endPoint}"><b>Where</b></th>
+                <th width="80" align="center" th:utext="#{distance}"><b>Distance</b></th>
+                <th width="110" align="center" th:utext="#{startDate}"><b>Start date</b></th>
+                <th width="65" align="center" th:utext="#{startTime}"><b>Start time</b></th>
+                <th width="60" align="center" th:utext="#{fuelUsed}"><b>Fuel used</b></th>
+                <th width="100" align="center" th:utext="#{idDispatcher}"><b>Dispatcher</b></th>
+                <th width="150" align="center" th:utext="#{idDriver}"><b>Driver</b></th>
+                <th width="140" align="center" th:utext="#{idCar}"><b>Car</b></th>
+                <th width="150" align="center" th:utext="#{idCargo}"><b>Cargo</b></th>
+                <th width="110" align="center" th:utext="#{endDate}"><b>End date</b></th>
+                <th width="70" align="center" th:utext="#{endTime}"><b>End time</b></th>
+            </tr>
+
+            <tr th:unless="${trips == null}" th:each="trip : ${trips}" th:class="${tripStat.even}?'even':'odd'">
+                <td width="15" align="center" th:text="${trip.id}"></td>
+                <td width="75" align="center" th:text="${trip.startPoint}"></td>
+                <td width="150" align="center" th:text="${trip.endPoint}"></td>
+                <td width="80" align="center" th:text="${trip.distance}"></td>
+                <td width="110" align="center" th:text="${trip.startDate}"></td>
+                <td width="65" align="center" th:text="${trip.startTime}"></td>
+                <td width="60" align="center" th:text="${trip.fuelUsed}"></td>
+                <td width="100" align="center" th:text="${trip.idDispatcher}"></td>
+                <td width="150" align="center" th:text="${trip.idDriver}"></td>
+                <td width="140" align="center" th:text="${trip.idCar}"></td>
+                <td width="150" align="center"><a th:href="@{/cargo(id=${trip.IdCargo.getId})}"
+                                                  th:text="${trip.idCargo}"> </a></td>
+                <td width="110" align="center" th:text="${trip.endDate}"></td>
+                <td width="70" align="center" th:text="${trip.endTime}"></td>
+            </tr>
+        </table>
+    </div>
+</div>
+
+
+
 <table align="center" cellspacing="20">
     <tr >
         <td ><a href="/trips/all" th:utext="#{trips}">Trips</a></td>
