--- a/src/main/resources/templates/cargos.html
+++ b/src/main/resources/templates/cargos.html
@@ -2,6 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title th:utext="#{cargos}">Cargos</title>
 </head>
 <body>
@@ -9,52 +12,38 @@
     .even{background-color: #FFFACD}
     .odd{background-color: #7FFFD4}
 </style>
+<div th:replace="trips :: navbar"></div>
+<div th:insert="trips :: header"></div>
 
-<div >
-    <form align="center" th:action="@{/cargos/all}">
-        <input type="radio" name="lang" id="english" value="en_En">
-        <label for="english">English</label>
-        <input type="radio" name="lang" id="russian" value="ru_Ru">
-        <label for="russian">Русский</label>
-        <button th:utext="#{selectLanguage}">Language</button>
-    </form>
-    <hr></hr>
+<div class="container-xxl p-2 text-center">
+    <div class="row row-cols-auto justify-content-md-center">
+        <table class="table table-hover table-sm table-bordered border-info">
+            <tr>
+                <th>Id</th>
+                <th th:utext="#{invoiceNumber}">Invoice number</th>
+                <th th:utext="#{nameCargo}">Name</th>
+                <th th:utext="#{price}">Price</th>
+                <th th:utext="#{insuranceNumber}">Insurance number</th>
+            </tr>
+
+            <tr th:unless="${cargos == null}" th:each="cargo : ${cargos}" th:class="${cargoStat.even}?'even':'odd'">
+                <td align="center" th:text="${cargo.id}"></td>
+                <td align="center" th:text="${cargo.invoiceNumber}"></td>
+                <td align="center" th:text="${cargo.name}"></td>
+                <td align="center" th:text="${cargo.price}"></td>
+                <td align="center" th:text="${cargo.insuranceNumber}"></td>
+
+            <tr th:unless="${cargo == null}" class="even">
+                <td align="center" th:text="${cargo.id}"></td>
+                <td align="center" th:text="${cargo.invoiceNumber}"></td>
+                <td align="center" th:text="${cargo.name}"></td>
+                <td align="center" th:text="${cargo.price}"></td>
+                <td align="center" th:text="${cargo.insuranceNumber}"></td>
+            </tr>
+            </tr>
+        </table>
+    </div>
 </div>
 
-<table>
-    <td width="15" align="center"><b>Id</b></td>
-    <td width="95" align="center" th:utext="#{invoiceNumber}"><b>Invoice number</b></td>
-    <td width="140" align="center" th:utext="#{nameCargo}"><b>Name</b></td>
-    <td width="60" align="center" th:utext="#{price}"><b>Price</b></td>
-    <td width="80" align="center" th:utext="#{insuranceNumber}"><b>Insurance number</b></td>
-
-</table>
-<table th:unless="${cargos == null}"  th:each="cargo : ${cargos}" th:class="${cargoStat.even}? 'even' : 'odd'">
-    <td width="15" align="center" th:text="${cargo.id}"></td>
-    <td width="95" align="center" th:text="${cargo.invoiceNumber}"></td>
-    <td width="140" align="center" th:text="${cargo.name}"></td>
-    <td width="60" align="center" th:text="${cargo.price}"></td>
-    <td width="80" align="center" th:text="${cargo.insuranceNumber}"></td>
-</table>
-<div th:unless="${cargo == null}" class="even">
-    <table>
-        <td width="15" align="center" th:text="${cargo.id}"></td>
-        <td width="95" align="center" th:text="${cargo.invoiceNumber}"></td>
-        <td width="140" align="center" th:text="${cargo.name}"></td>
-        <td width="60" align="center" th:text="${cargo.price}"></td>
-        <td width="80" align="center" th:text="${cargo.insuranceNumber}"></td>
-    </table>
-</div>
-
-<table align="center" cellspacing="20">
-    <tr >
-        <td ><a href="/trips/all" th:utext="#{trips}">Trips</a></td>
-        <td ><a href="/drivers/all" th:utext="#{drivers}">Drivers</a></td>
-        <td ><a href="/dispatchers/all" th:utext="#{dispatchers}">Dispatchers</a></td>
-        <td ><a href="/cars/all" th:utext="#{cars}">Cars</a></td>
-        <td ><a href="/cargos/all" th:utext="#{cargos}">Cargos</a></td>
-        <td ><a href="/statusCar/all" th:utext="#{carStatuses}">Car statuses</a></td>
-    </tr>
-</table>
 </body>
 </html>
