--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -2,60 +2,63 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Автомобили</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title th:utext="#{cars}">Cars</title>
 </head>
 <body>
 <style>
     .even{background-color: #FFFACD}
     .odd{background-color: #7FFFD4}
 </style>
+<div th:replace="trips :: navbar"></div>
+<div th:insert="trips :: header"></div>
 
-<div >
-    <form align="center" th:action="@{/cars/all}">
-        <input type="radio" name="lang" id="english" value="en_En">
-        <label for="english">English</label>
-        <input type="radio" name="lang" id="russian" value="ru_Ru">
-        <label for="russian">Русский</label>
-        <button th:utext="#{selectLanguage}">Language</button>
-    </form>
-    <hr></hr>
+<div th:unless="${cars == null}" class="container-xxl p-2 text-center">
+    <div class="row row-cols-auto justify-content-md-center">
+        <table class="table table-hover table-sm table-bordered border-info">
+            <tr>
+                <th>Id</th>
+                <th th:utext="#{brand}">Brand</th>
+                <th th:utext="#{number}">Number</th>
+                <th th:utext="#{mileage}">Mileage</th>
+                <th th:utext="#{idStatus}">Car status</th>
+            </tr>
+
+            <tr th:unless="${cars == null}" th:each="car : ${cars}" th:class="${carStat.even}?'even':'odd'">
+                <td align="center" th:text="${car.id}"></td>
+                <td align="center" th:text="${car.brand}"></td>
+                <td align="center" th:text="${car.number}"></td>
+                <td align="center" th:text="${car.mileage}"></td>
+                <td align="center" th:text="${car.idStatus}"></td>
+            </tr>
+        </table>
+    </div>
 </div>
 
-<table>
-    <td width="15" align="center"><b>Id</b></td>
-    <td width="60" align="center" th:utext="#{brand}"><b>Brand</b></td>
-    <td width="85" align="center" th:utext="#{number}"><b>Number</b></td>
-    <td width="70" align="center" th:utext="#{mileage}"><b>Mileage</b></td>
-    <td width="280" align="center" th:utext="#{idStatus}"><b>Car status</b></td>
-</table>
+<div th:unless="${carWithStatus == null}" class="container-xxl p-2 text-center">
+    <div class="row row-cols-auto justify-content-md-center">
+        <table class="table table-hover table-sm table-bordered border-info text-center">
+            <tr>
+                <th>Id</th>
+                <th th:utext="#{brand}">Brand</th>
+                <th th:utext="#{number}">Number</th>
+                <th th:utext="#{mileage}">Mileage</th>
+                <th th:utext="#{idStatus}">Car status</th>
+            </tr>
 
-<table th:unless="${cars == null}" th:each="car : ${cars}" th:class="${carStat.even}? 'even' : 'odd'">
-    <td width="15" align="center" th:text="${car.id}"></td>
-    <td width="60" align="center" th:text="${car.brand}"></td>
-    <td width="85" align="center" th:text="${car.number}"></td>
-    <td width="70" align="center" th:text="${car.mileage}"></td>
-    <td width="280" th:text="${car.idStatus}"></td>
-</table>
-
-<div th:unless="${carWithStatus == null}" >
-<table th:each="car1: ${carWithStatus.cars}" th:class="${car1Stat.even}? 'even' : 'odd'">
-   <td width="15" align="center" th:text="${car1.id}"></td>
-   <td width="60" align="center" th:text="${car1.brand}"></td>
-   <td width="75" align="center" th:text="${car1.number}"></td>
-   <td width="45" align="center" th:text="${car1.mileage}"></td>
-   <td width="280" th:text="${car1.idStatus}"></td>
-</table>
+            <tr th:unless="${carWithStatus == null}" th:each="car1 : ${carWithStatus.cars}"
+                th:class="${car1Stat.even}?'even':'odd'">
+                <td align="center" th:text="${car1.id}"></td>
+                <td align="center" th:text="${car1.brand}"></td>
+                <td align="center" th:text="${car1.number}"></td>
+                <td align="center" th:text="${car1.mileage}"></td>
+                <td align="center" th:text="${car1.idStatus}"></td>
+            </tr>
+        </table>
+    </div>
 </div>
 
-<table align="center" cellspacing="20">
-    <tr >
-        <td ><a href="/trips/all" th:utext="#{trips}">Trips</a></td>
-        <td ><a href="/drivers/all" th:utext="#{drivers}">Drivers</a></td>
-        <td ><a href="/dispatchers/all" th:utext="#{dispatchers}">Dispatchers</a></td>
-        <td ><a href="/cars/all" th:utext="#{cars}">Cars</a></td>
-        <td ><a href="/cargos/all" th:utext="#{cargos}">Cargos</a></td>
-        <td ><a href="/statusCar/all" th:utext="#{carStatuses}">Car statuses</a></td>
-    </tr>
-</table>
 </body>
 </html>
