--- a/src/main/resources/templates/drivers.html
+++ b/src/main/resources/templates/drivers.html
@@ -2,43 +2,43 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Все водители</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title th:utext="#{drivers}">Drivers</title>
 </head>
 <body>
 <style>
     .even{background-color: #FFFACD}
     .odd{background-color: #7FFFD4}
 </style>
+<div th:replace="trips :: navbar"></div>
+<div th:insert="trips :: header"></div>
 
-<div >
-    <form align="center" th:action="@{/drivers/all}">
-        <input type="radio" name="lang" id="english" value="en_En">
-        <label for="english">English</label>
-        <input type="radio" name="lang" id="russian" value="ru_Ru">
-        <label for="russian">Русский</label>
-        <button th:utext="#{selectLanguage}">Language</button>
-    </form>
-    <hr></hr>
+<div class="container-xxl p-2 text-center">
+    <div class="row row-cols-auto justify-content-md-center">
+        <table class="table table-hover table-sm table-bordered border-info">
+            <tr>
+                <th>Id</th>
+                <th th:utext="#{last_name}">Last name</th>
+                <th th:utext="#{first_name}">First name</th>
+                <th th:utext="#{second_name}">Second name</th>
+                <th th:utext="#{isInTrip}">Is in trip?</th>
+                <th th:utext="#{isActive}">Is active?</th>
+            </tr>
+
+            <tr th:each="driver : ${drivers}" th:class="${driverStat.even}?'even':'odd'">
+                <td align="center" th:text="${driver.id}"></td>
+                <td align="center" th:text="${driver.last_name}"></td>
+                <td align="center" th:text="${driver.first_name}"></td>
+                <td align="center" th:text="${driver.second_name}"></td>
+                <td align="center" th:text="${driver.isInTrip}"></td>
+                <td align="center" th:text="${driver.isActive}"></td>
+            </tr>
+        </table>
+    </div>
 </div>
 
-<table th:each="driver : ${drivers}" th:class="${driverStat.even}? 'even' : 'odd'">
-    <td th:text="${driver.id}"></td>
-    <td th:text="${driver.first_name}"></td>
-    <td th:text="${driver.second_name}"></td>
-    <td th:text="${driver.last_name}"></td>
-    <td th:text="${driver.isInTrip}"></td>
-    <td th:text="${driver.isActive}"></td>
-</table>
 
-<table align="center" cellspacing="20">
-    <tr >
-        <td ><a href="/trips/all" th:utext="#{trips}">Trips</a></td>
-        <td ><a href="/drivers/all" th:utext="#{drivers}">Drivers</a></td>
-        <td ><a href="/dispatchers/all" th:utext="#{dispatchers}">Dispatchers</a></td>
-        <td ><a href="/cars/all" th:utext="#{cars}">Cars</a></td>
-        <td ><a href="/cargos/all" th:utext="#{cargos}">Cargos</a></td>
-        <td ><a href="/statusCar/all" th:utext="#{carStatuses}">Car statuses</a></td>
-    </tr>
-</table>
 </body>
 </html>
