--- a/src/main/resources/templates/statusCar.html
+++ b/src/main/resources/templates/statusCar.html
@@ -2,44 +2,36 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Все статусы машин</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title th:utext="#{statuses}">Statuses</title>
 </head>
 <body>
 <style>
     .even{background-color: #FFFACD}
     .odd{background-color: #7FFFD4}
 </style>
-<div >
-    <form align="center" th:action="@{/statusCar/all}">
-        <input type="radio" name="lang" id="english" value="en_En">
-        <label for="english">English</label>
-        <input type="radio" name="lang" id="russian" value="ru_Ru">
-        <label for="russian">Русский</label>
-        <button th:utext="#{selectLanguage}">Language</button>
-    </form>
-    <hr></hr>
+
+<div th:replace="trips :: navbar"></div>
+<div th:insert="trips :: header"></div>
+
+<div class="container-xxl p-2 text-center">
+    <div class="row row-cols-auto justify-content-md-center">
+        <table class="table table-hover table-sm table-bordered border-info">
+            <tr>
+                <th>Id</th>
+                <th th:utext="#{idStatus}">Car status</th>
+            </tr>
+
+            <tr th:each="status : ${statusesCars}" th:class="${statusStat.even}?'even':'odd'">
+                <td align="center" th:text="${status.id}"></td>
+                <td align="center" th:text="${status.status}"></td>
+            </tr>
+        </table>
+    </div>
 </div>
 
-<table>
-    <td width="15" align="center"><b>Id</b></td>
-    <td width="280" align="center" th:utext="#{idStatus}"><b>Car Status</b></td>
 
-</table>
-
-<table th:each="status : ${statusesCars}" th:class="${statusStat.even}?'even':'odd'">
-    <td width="15" align="center" th:text="${status.id}"></td>
-    <td width="280" align="center" th:text="${status.status}"></td>
-</table>
-
-<table align="center" cellspacing="20">
-    <tr >
-        <td ><a href="/trips/all" th:utext="#{trips}">Trips</a></td>
-        <td ><a href="/drivers/all" th:utext="#{drivers}">Drivers</a></td>
-        <td ><a href="/dispatchers/all" th:utext="#{dispatchers}">Dispatchers</a></td>
-        <td ><a href="/cars/all" th:utext="#{cars}">Cars</a></td>
-        <td ><a href="/cargos/all" th:utext="#{cargos}">Cargos</a></td>
-        <td ><a href="/statusCar/all" th:utext="#{carStatuses}">Car statuses</a></td>
-    </tr>
-</table>
 </body>
 </html>
