--- a/src/main/resources/templates/trips.html
+++ b/src/main/resources/templates/trips.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title th:utext="#{trips}">Trips</title>
 </head>
@@ -13,32 +11,69 @@
 <style>
     .even{background-color: #FFFACD}
     .odd{background-color: #7FFFD4}
+
 </style>
-<div >
-<form align="center" th:action="@{/trips/all}">
-    <input type="radio" name="lang" id="english" value="en_En">
-    <label for="english">English</label>
-    <input type="radio" name="lang" id="russian" value="ru_Ru">
-    <label for="russian">Русский</label>
-    <button th:utext="#{selectLanguage}">Language</button>
-</form>
-</div>
 
-<form method="POST" th:action="@{/logout}">
-    <input type="submit" value="Logout"/>
-</form>
+<nav th:fragment="navbar"  class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/login" th:utext="#{enter}">Enter</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/trips/all" th:utext="#{trips}">Trips</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/drivers/all" th:utext="#{drivers}">Drivers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/dispatchers/all" th:utext="#{dispatchers}">Dispatchers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/cars/all" th:utext="#{cars}">Cars</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/cargos/all" th:utext="#{cargos}">Cargos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/statusCar/all" th:utext="#{carStatuses}">Car statuses</a>
+                </li>
 
+                <!--<li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Dropdown link
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>-->
+            </ul>
+        </div>
+        <form>
+            <a class="btn btn-primary" th:if="${#locale.toString() == 'ru_RU'}" href="?lang=en_En">English</a>
+            <a class="btn btn-primary" th:if="${#locale.toString() == 'en_EN'}" href="?lang=ru_RU">Русский</a>
+        </form>
+        <form type="submit" method="POST" th:action="@{/logout}">
+            <button class="btn btn-danger" th:utext="#{exit}">Exit</button>
+        </form>
+    </div>
+</nav>
 
-<div class="container-xxl p-3 bg-primary text-white text-center">
+<div th:fragment="header" class="container-xxl p-3 bg-primary text-white text-center">
     <h1>Jarex Company (or another name)</h1>
     <p th:utext="#{programname}">Program for cargo transportation management</p>
 </div>
 
+
 <div class="container-xxl p-2 text-center">
     <div class="row row-cols-auto justify-content-md-center">
-        <table>
+        <table class="table table-hover table-sm table-bordered border-info">
             <tr>
-                <th><b>Id</b></th>
+                <th>Id</th>
                 <th th:utext="#{startPoint}">From</th>
                 <th th:utext="#{endPoint}">Where</th>
                 <th th:utext="#{distance}">Distance</th>
@@ -65,7 +100,7 @@
                 <td align="center" th:text="${trip.idDriver}"></td>
                 <td align="center" th:text="${trip.idCar}"></td>
                 <td align="center"><a th:href="@{/cargo(id=${trip.IdCargo.getId})}"
-                                                  th:text="${trip.idCargo}"> </a></td>
+                                      th:text="${trip.idCargo}"> </a></td>
                 <td align="center" th:text="${trip.endDate}"></td>
                 <td align="center" th:text="${trip.endTime}"></td>
             </tr>
@@ -73,18 +108,6 @@
     </div>
 </div>
 
-
-
-<table align="center" cellspacing="20">
-    <tr >
-        <td ><a href="/trips/all" th:utext="#{trips}">Trips</a></td>
-        <td ><a href="/drivers/all" th:utext="#{drivers}">Drivers</a></td>
-        <td ><a href="/dispatchers/all" th:utext="#{dispatchers}">Dispatchers</a></td>
-        <td ><a href="/cars/all" th:utext="#{cars}">Cars</a></td>
-        <td ><a href="/cargos/all" th:utext="#{cargos}">Cargos</a></td>
-        <td ><a href="/statusCar/all" th:utext="#{carStatuses}">Car statuses</a></td>
-    </tr>
-</table>
 
 </body>
 </html>
