--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Title</title>
+    <title th:utext="#{enter}">Enter</title>
     <style>
         /* Bordered form */
 form {
@@ -38,68 +38,52 @@ button {
 /* Add a hover effect for buttons */
 button:hover {
   opacity: 0.8;
-}
 
-/* Extra style for the cancel button (red) */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
 }
 
 /* Center the avatar image inside this container */
 .imgcontainer {
   text-align: center;
-  margin: 24px 0 12px 0;
+  margin: 5px 0 0 0;
 }
 
 /* Avatar image */
 img.avatar {
   width: 40%;
-  border-radius: 50%;
+  border-radius: 30%;
 }
 
-/* Add padding to containers */
-.container {
-  padding: 16px;
-}
-
-/* The "Forgot password" text */
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-    display: block;
-    float: none;
-  }
-  .cancelbtn {
-    width: 100%;
-  }
-
+.selectLanguage{
+position:absolute; top:29px; right:5px;
+border: 1px ;
 }
     </style>
 </head>
 <body>
-<form th:action="@{/login}" method="post">
-   <!-- <div class="imgcontainer">
-        <img src="img_avatar2.png" alt="Avatar" class="avatar">
-    </div>-->
 
-    <div class="container-sm">
-        <label for="uname"><b>Username</b></label>
+<div th:insert="trips :: header"></div>
+
+<form class="selectLanguage">
+    <a class="btn btn-warning" th:if="${#locale.toString() == 'ru_RU'}" href="?lang=en_En">English</a>
+    <a class="btn btn-warning" th:if="${#locale.toString() == 'en_EN'}" href="?lang=ru_RU">Русский</a>
+</form>
+
+<form th:action="@{/login}" method="post">
+    <div class="imgcontainer">
+        <img src="https://assets.avtocod.ru/storage/2018-01/24/mceclip0(1).jpg" alt="Avatar" class="avatar">
+    </div>
+
+    <div class="container">
+        <label for="uname" th:utext="#{loginforlogin}"><b>Login</b></label>
         <input type="text" placeholder="Enter Username" name="user" id="uname" required>
 
-        <label for="psw"><b>Password</b></label>
+        <label for="psw" th:utext="#{passwordforlogin}"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="pass" id="psw" required>
 
         <button type="submit">Login</button>
-        <!--<label>
+        <label>
             <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>-->
+        </label>
     </div>
 
 </form>
