--- a/src/main/resources/templates/drivers.html
+++ b/src/main/resources/templates/drivers.html
@@ -15,6 +15,10 @@
 <div th:replace="trips :: navbar"></div>
 <div th:insert="trips :: header"></div>
 
+<div class="container p-2">
+    <a class="btn btn-success" href="/registerDriver" th:utext="#{registerDriver}">Register new driver</a>
+</div>
+
 <div class="container-xxl p-2 text-center">
     <div class="row row-cols-auto justify-content-md-center">
         <table class="table table-hover table-sm table-bordered border-info">
