--- a/src/main/resources/templates/registerDriver.html
+++ b/src/main/resources/templates/registerDriver.html
@@ -64,7 +64,7 @@
         <div class="ml-5 form-group row mt-2">
             <label class="col-sm-4 col-form-label" for="isInTrip" th:utext="#{isInTrip}">Is in trip?</label>
             <div class="col-sm-5">
-                <input required type="text" class="form-control" th:field="*{isInTrip}" id="isInTrip">
+                <input required type="number" min="0" max="1" class="form-control" th:field="*{isInTrip}" id="isInTrip">
                 <div class="error">
                     <p th:each="err : ${#fields.errors('isInTrip')}" class="alert-danger" th:text="#{${err}}"></p>
                 </div>
@@ -73,14 +73,15 @@
         <div class="ml-5 form-group row mt-2">
             <label class="col-sm-4 col-form-label" for="isActive" th:utext="#{isActive}">Is in trip?</label>
             <div class="col-sm-5">
-                <input required type="text" class="form-control" th:field="*{isActive}" id="isActive">
+                <input required type="number" min="0" max="1" class="form-control" th:field="*{isActive}" id="isActive">
                 <div class="error">
                     <p th:each="err : ${#fields.errors('isActive')}" class="alert-danger" th:text="#{${err}}"></p>
                 </div>
             </div>
         </div>
         <div class="form-group mt-2 text-center">
-            <input type="submit" class="btn btn-primary" value="Register">
+            <input type="submit" class="btn btn-success" th:value="${#locale.toString() == 'en_EN'}? 'Register new driver' :
+             'Зарегистрировать нового водителя'">
         </div>
     </div>
 </form>
