--- a/src/main/resources/templates/registerCar.html
+++ b/src/main/resources/templates/registerCar.html
@@ -53,7 +53,8 @@
             </div>
         </div>
         <div class="form-group mt-2 text-center">
-            <input type="submit" class="btn btn-primary" value="Register">
+            <input type="submit" class="btn btn-success" th:value="${#locale.toString() == 'en_EN'}? 'Add new car' :
+             'Добавить новый автомобиль'">
         </div>
     </div>
 </form>
