--- a/src/main/resources/templates/registerDispatcher.html
+++ b/src/main/resources/templates/registerDispatcher.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Register dispatcher</title>
+    <title th:utext="#{registerDispatcher}">Register dispatcher</title>
 </head>
 <body>
 
@@ -62,7 +62,8 @@
             </div>
         </div>
         <div class="form-group mt-2 text-center">
-            <input type="submit" class="btn btn-primary" value="Register">
+            <input type="submit" class="btn btn-success" th:value="${#locale.toString() == 'en_EN'}? 'Register new dispatcher' :
+             'Зарегистрировать нового диспетчера'">
         </div>
     </div>
 </form>
